# cg-study

./: CMakeLists.txt  CMakelists.txt  LICENSE  README.md
src/: main.cpp
src/components/: Aresta.hpp  Face.hpp  Ponto.hpp
src/components/Camera/: Camera.cpp  Camera.hpp
src/components/Cenario/: Cenario.cpp  Cenario.hpp
src/components/Cluster/: Cluster.cpp  Cluster.hpp
src/components/CurvasParametricas/: CurvasParametricas.cpp  CurvasParametricas.hpp
src/components/Luz/: Luz.hpp  LuzAmbiente.cpp  LuzAmbiente.hpp  LuzDirecional.cpp  LuzDirecional.hpp  LuzPontual.cpp  LuzPontual.hpp  LuzSpot.cpp  LuzSpot.hpp
src/components/Malha/: Malha.cpp  Malha.hpp
src/components/Objeto/: Objeto.cpp  Objeto.hpp
src/components/Ray/: Ray.cpp  Ray.hpp
src/components/RayCasting/: RayCasting.cpp  RayCasting.hpp
src/helpers/IDController/: IDController.cpp  IDController.hpp
src/helpers/RBG/: RGB.cpp  RGB.hpp
src/helpers/RGBIntensity/: RGBIntensity.cpp  RGBIntensity.hpp
src/helpers/Window/: Window.cpp  Window.hpp
src/samples/: samples.hpp
src/samples/Cilindro/: Cilindro.cpp  Cilindro.hpp
src/samples/Cone/: Cone.cpp  Cone.hpp
src/samples/Cubo/: Cubo.cpp  Cubo.hpp
src/samples/CurvaBezier/: CurvaBezier.cpp  CurvaBezier.hpp
src/samples/Esfera/: Esfera.cpp  Esfera.hpp
src/samples/FaceTriangular/: FaceTriangular.cpp  FaceTriangular.hpp
src/samples/Plano/: Plano.cpp  Plano.hpp
src/test/CriarCubo/: CriarCubo.cpp  CriarCubo.hpp
src/test/CriarCurvaBezier/: CriarCurvaBezier.cpp  CriarCurvaBezier.hpp
